# livekit-hugging-voice

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY.md  prompt.md  prompts.md  pyproject.toml
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  gpu-e2e.yaml  scorecard.yaml  security.yaml
benchmarks/: __init__.py  generate_voice_refs.py  gpu_memory.py  multisession_soak.py  summarize.py  tool_eval_corpus.py  tts_quality_sentences.json  two_session_soak.py  voice_audition.py
benchmarks/reports/: model-selection.json
deploy/docker/: compose.livekit.yaml  compose.yaml  resolve_image_digests.py
deploy/kubernetes/base/: config-map.yaml  deployment.yaml  headless-service.yaml  kustomization.yaml  model-prefetch-job.yaml  pvc.yaml  secret.yaml  service-account.yaml  service.yaml
deploy/kubernetes/overlays/demo/: kustomization.yaml
deploy/kubernetes/overlays/production/: anti-affinity.yaml  kustomization.yaml
docs/: architecture.md  benchmarks.md  docker.md  kubernetes.md  model-delivery.md  model-selection.md  operations.md  performance.md  protocol.md  runtime-lifecycle.md  security.md  tool-calling.md  upstream-baseline.md
docs/performance/: faster-qwen3-tts-audit.md  final-report.md  llama-options.md  llm-candidate-artifacts.md  multisession-selection.md  tensorrt-llm-decision.md  tts-quality-acceptance.md
examples/minimal-livekit-agent/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  web.py
examples/minimal-livekit-agent/static/: index.html
models/: README.md  manifest.yaml
models/profiles/: compat_gemma31_qwen17_ggml.lock.json  compat_gemma31_qwen17_ggml.manifest.yaml  gemma4_26b_a4b.lock.json  gemma4_26b_a4b.manifest.yaml  multisession_gemma_a4b_qwen06_cuda.lock.json  multisession_gemma_a4b_qwen06_cuda.manifest.yaml  multisession_qwen_a3b_qwen06_cuda.lock.json  multisession_qwen_a3b_qwen06_cuda.manifest.yaml  qwen3_30b_a3b_2507.lock.json  qwen3_30b_a3b_2507.manifest.yaml  qwen3_tts_0_6b_cuda.lock.json  qwen3_tts_0_6b_cuda.manifest.yaml
services/gpu-service/: Dockerfile  README.md  pyproject.toml
services/gpu-service/config/: default.yaml
services/gpu-service/config/profiles/: compat.yaml  multisession-gemma-a4b.yaml  multisession-qwen-a3b.yaml
services/gpu-service/scripts/: build_llama_cpp.py
services/gpu-service/src/hugging_voice_service/: __init__.py  app.py  auth.py  cancellation.py  capacity.py  config.py  conversation.py  lifecycle.py  llama_process.py  llm_profiles.py  model_manifest.py  model_prefetch.py  pipeline.py  realtime.py  sessions.py  telemetry.py  text_segmenter.py  version.py
services/gpu-service/src/hugging_voice_service/runtimes/: __init__.py  gemma.py  llama_cpp_chat.py  parakeet.py  qwen_tts.py  silero.py  smart_turn.py
services/gpu-service/src/hugging_voice_service/schedulers/: __init__.py  stt.py  tts.py  turn.py
services/gpu-service/src/hugging_voice_service/voice_refs/: metadata.json
services/gpu-service/tests/: test_config.py  test_external_gpu_e2e.py  test_gpu_smoke.py  test_lifecycle.py  test_llama_process.py  test_model_manifest.py  test_pipeline.py  test_realtime_foundations.py  test_realtime_websocket.py  test_runtimes.py  test_schedulers.py  test_semantic_turn.py  test_service_import.py
tests/: test_benchmarks.py  test_deployment_contracts.py  test_forbidden_paths.py  test_multisession_benchmark_contract.py  test_tool_eval_corpus.py  test_tts_quality_corpus.py  test_web_demo.py  test_workspace_smoke.py
tests/fixtures/protocol/: client_audio_append.json  client_audio_clear.json  client_audio_commit.json  client_conversation_item_create.json  client_conversation_tool_output.json  client_response_cancel.json  client_response_create.json  client_response_speak.json  client_session_update.json  server_audio_delta.json  server_audio_done.json  server_conversation_item_created.json  server_error.json  server_function_call_done.json  server_response_created.json  server_response_done.json  server_session_created.json  server_session_updated.json  server_speech_started.json  server_speech_stopped.json  server_text_delta.json  server_text_done.json  server_transcription_completed.json  server_transcription_delta.json
