[project]
name = "livekit-hugging-voice-workspace"
version = "0.0.0"
description = "Development workspace for livekit-hugging-voice"
requires-python = ">=3.11,<3.12"

[dependency-groups]
dev = [
  "build==1.3.0",
  "httpx2==2.7.0",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==7.1.0",
  "ruff==0.12.5",
  "types-pyyaml==6.0.12.20250516",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/hugging-voice-protocol",
  "packages/livekit-plugins-hugging-voice",
  "services/gpu-service",
  "examples/minimal-livekit-agent",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".models", "benchmarks/reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 28

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = [
  "tests",
  "packages/hugging-voice-protocol/tests",
  "packages/livekit-plugins-hugging-voice/tests",
  "services/gpu-service/tests",
]
markers = [
  "gpu: requires a real NVIDIA GPU and local verified model weights",
  "integration: crosses package or process boundaries",
]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 79
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["packages/livekit-plugins-hugging-voice"]
exclude = ["benchmarks/reports"]

[[tool.mypy.overrides]]
module = [
  "faster_qwen3_tts",
  "nano_parakeet",
  "nano_parakeet.*",
  "sentencepiece",
  "silero_vad",
  "silero_vad.*",
  "torch",
  "torch.*",
]
ignore_missing_imports = true
