[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "hugging-voice-minimal-agent"
version = "0.3.0"
description = "Minimal LiveKit Agent example for livekit-hugging-voice"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.12"
authors = [{ name = "livekit-hugging-voice contributors" }]
dependencies = [
  "aiohttp==3.14.2",
  "livekit-agents==1.6.6",
  "livekit-api==1.2.0",
  "livekit-plugins-hugging-voice==0.3.0",
]

[tool.uv.sources]
livekit-plugins-hugging-voice = { workspace = true }

[tool.hatch.build.targets.wheel]
include = ["agent.py", "web.py", "static/index.html"]

[tool.hatch.build.targets.sdist]
include = ["/agent.py", "/web.py", "/static", "/README.md", "/pyproject.toml"]
