[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "hugging-voice-gpu-service"
version = "0.3.0"
description = "Local GPU speech-to-speech service for livekit-hugging-voice"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.12"
authors = [{ name = "livekit-hugging-voice contributors" }]
dependencies = [
  "aiohttp==3.14.2",
  "fastapi==0.139.2",
  "hugging-voice-protocol==0.3.0",
  "huggingface-hub==0.36.0",
  "prometheus-client==0.25.0",
  "pydantic-settings==2.10.1",
  "pyyaml==6.0.3",
  "uvicorn==0.51.0",
  "websockets==15.0.1",
]

[project.optional-dependencies]
gpu = [
  "faster-qwen3-tts[ggml]==0.3.2",
  "nano-parakeet==0.2.1",
  "numpy==2.3.5",
  "onnxruntime==1.27.0",
  "silero-vad==6.2.1",
  "torch==2.13.0",
  "torchaudio==2.10.0",
  "transformers==4.57.3",
]

[project.scripts]
hugging-voice-model-prefetch = "hugging_voice_service.model_prefetch:main"
hugging-voice-model-verify = "hugging_voice_service.model_manifest:main"
hugging-voice-service = "hugging_voice_service.app:main"

[tool.uv.sources]
hugging-voice-protocol = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hugging_voice_service"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]
